; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_turnstile.c_turnstile_reference.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_turnstile.c_turnstile_reference.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.turnstile = type { i32 }

@TURNSTILE_NULL = common dso_local global %struct.turnstile* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @turnstile_reference(%struct.turnstile* %0) #0 {
  %2 = alloca %struct.turnstile*, align 8
  store %struct.turnstile* %0, %struct.turnstile** %2, align 8
  %3 = load %struct.turnstile*, %struct.turnstile** %2, align 8
  %4 = load %struct.turnstile*, %struct.turnstile** @TURNSTILE_NULL, align 8
  %5 = icmp eq %struct.turnstile* %3, %4
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  br label %11

7:                                                ; preds = %1
  %8 = load %struct.turnstile*, %struct.turnstile** %2, align 8
  %9 = getelementptr inbounds %struct.turnstile, %struct.turnstile* %8, i32 0, i32 0
  %10 = call i32 @os_ref_retain(i32* %9)
  br label %11

11:                                               ; preds = %7, %6
  ret void
}

declare dso_local i32 @os_ref_retain(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
